Bug 1773271 - Avoid distorting contact pictures in message header pane. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D148639

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -935,6 +935,7 @@ button.show-more-recipients:hover {
 .recipient-avatar img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .message-header-show-recipient-avatar #expandedfromBox .recipient-avatar {
